5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1602_2895.log
== TEST (2019-03-20 19:05:49) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario"))
z = float(input("qual o valor do frete"))
-- OUTPUT:
Digite 3 numeros
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:06:30) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
-- OUTPUT:
Digite 3 numeros
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:07:57) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- EXECUTION TIME:
0.175766
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:03) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:09:37) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- EXECUTION TIME:
0.192678
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:09:43) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:48:11) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:48:59) 
-- CODE:
x = float(input("quantidades de jogos a serem encomendados:"))
y = float(input("qual o valor unitario:"))
z = float(input("qual o valor do frete:"))
total = x*y+z
print(total)
-- EXECUTION TIME:
0.17526
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:58:34) 
-- CODE:
x =float(input("a quantidades de jogos a seres encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=float(x, y, z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=float(x, y, z)
TypeError: float() takes at most 1 argument (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:00:08) 
-- CODE:
x =float(input("a quantidades de jogos a seres encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=(float)(x, y, z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(float)(x, y, z)
TypeError: float() takes at most 1 argument (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:02:36) 
-- CODE:
x =float(input("a quantidades de jogos a seres encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=x*y+z
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:03:06) 
-- CODE:
x =float(input("a quantidades de jogos a seres encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=x*y+z
print(total)
-- EXECUTION TIME:
0.150441
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:03:16) 
-- CODE:
x =float(input("a quantidades de jogos a seres encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=x*y+z
print(total)
-- EXECUTION TIME:
0.176281
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:08:28) 
-- CODE:
x =float(input("a quantidades de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo"))
z =float(input("o valor do frete"))
total=float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:13:34) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:13:50) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.146331
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 19:01:26) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:01:59) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.147908
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:25:35) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total=float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:25:56) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total=float(x*y+z)
print(total)
-- EXECUTION TIME:
0.161287
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:36:48) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:37:23) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.162224
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:55:08) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete"))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:55:31) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:55:49) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:56:04) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.131154
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:04:14) 
-- CODE:
x =float(inpunt("a quantidade de jogos a serem encomendados:"))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x =float(inpunt("a quantidade de jogos a serem encomendados:"))
NameError: name 'inpunt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:04:29) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados:"))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:04:48) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados:"))
y =float(input("o valor unitario: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.168303
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:13:34) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:13:48) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.210788
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 00:03:33) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 00:03:46) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.174742
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:10:33) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z = float(input("o valor do frete: "))
total =float(x*y+zprint(total)
-- ERROR:
File "XXXX", line 5
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:11:03) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z = float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:11:23) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario: "))
z = float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.138364
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:55:08) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
print(x, y, z)
-- OUTPUT:
12.0 45.0 78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:56:06) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total(x, y, z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total(x, y, z)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:58:38) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:59:00) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.215617
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:44:50) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total(x*y+z)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:45:11) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:45:30) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total=(x*y+z)
print(total)
-- EXECUTION TIME:
0.142191
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:11:42) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:11:55) 
-- CODE:
x =float(input("a quantidade de jogos a serem encontrados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.161641
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:45:53) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:46:11) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:46:24) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.161564
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:44:44) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: ")
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
File "XXXX", line 3
    z =float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:44:54) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: ")
z =float=(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
File "XXXX", line 3
    z =float=(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:45:25) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =float(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:46:14) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =float(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:46:35) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total =(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:47:45) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total = float(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:48:16) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total = int(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:11) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total = int(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:49:40) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =float(x*y+z)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:51:19) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float=(input("o valor do frete: "))
total = x*y+z
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = x*y+z
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:52:00) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float x*y+z
print(total)
-- ERROR:
File "XXXX", line 4
    total =float x*y+z
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:52:20) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:52:46) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.129404
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:20:31) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:20:54) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.189302
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:33:35) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:34:02) 
-- CODE:
x =float(input("a quantidade de jogos a serem encomendados: "))
y =float(input("o valor unitario de cada jogo: "))
z =float(input("o valor do frete: "))
total =float(x*y+z)
print(total)
-- EXECUTION TIME:
0.172725
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
